--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "clicky-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": " https://rafaelde-leon.github.io/React-Clicky-Game/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
@@ -11,6 +13,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
